added new templates for courses and players

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,15 +7,16 @@ html
     body
         header
             nav.navbar.navbar-default
-                div.navbar-header
-                    a.navbar-brand Stableford
-                ul.nav.navbar-nav.pull-right
-                    li
-                        a(href='/') Home
-                    li
-                        a(href='/courses') Courses
-                    li
-                        a(href='/players') Players
+                div.container
+                    div.navbar-header
+                        a.navbar-brand Stableford
+                    ul.nav.navbar-nav.pull-right
+                        li
+                            a(href='/') Home
+                        li
+                            a(href='/courses') Courses
+                        li
+                            a(href='/players') Players
 
 
 
