--- a/views/scores.jade
+++ b/views/scores.jade
@@ -30,44 +30,85 @@ block content
                     th Hole 17
                     th Hole 18
                 tbody
-                    td
-                        Player name
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
-                    td
-                        input(type='number').form-control
+                    tr
+                        td
+                            Player name
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                        td
+                            input(type='number').form-control
+                    tr.score__index
+                        td
+                            span
+                                small SI
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
+                        td
+                            span 5
             //Score card
 
 
