--- a/views/players.jade
+++ b/views/players.jade
@@ -4,12 +4,11 @@ block content
 
     // Wrapper
     #wrapper
-        h1 Players
         div.row
             aside.col-sm-4
                 // USER INFO
+                h2 User details
                 #userInfo.panel.panel-default
-                    div.panel-heading User details
                     div.panel-body
                         h3 Personal details
                         ul.list-group
@@ -34,7 +33,7 @@ block content
             // /USER INFO
             main.col-sm-8
                 // USER LIST
-                h2 User List
+                h2 Players
                 #userList
                     table.table.table-striped.table-hover.table-bordered
                         thead
