--- a/views/players.jade
+++ b/views/players.jade
@@ -47,7 +47,8 @@ block content
 
                 // ADD USER
 
-                a.btn.add-user(href='#userControls', data-toggle='collapse', data-target='#userControls') Add/Update user
+                a.btn.btn-default.add-user(href='#userControls', data-toggle='collapse', data-target='#userControls') Add/Update user
+                hr
                 div#userControls.collapse.panel.panel-default
                     div.panel-heading User details
                     #addUser(data-userid="").form-horizontal.panel-body
