--- a/views/players.jade
+++ b/views/players.jade
@@ -46,7 +46,7 @@ block content
                 // /USER LIST
 
                 // ADD USER
-                a.btn.btn-default.add-user(href='#userControls', data-toggle='collapse', data-target='#userControls') Add/Update user
+                a.btn.btn-default.add-user(href='#userControls', data-toggle='collapse', data-target='#userControls') Add/Update Player
                 hr
                 div#userControls.collapse.panel.panel-default
                     div.panel-heading User details
